--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,17 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Meow, Meow!</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/yeoman.png" alt="It's Kitten Time!"><br>
+    Which type of snowy kitty cat are you?
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/about">Get Started!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+<div>
+  <h1>Meow, Meow!</h1>
+  <p class="lead">
+    <img src="images/yeoman.png" alt="Do you want to play a kitty game??"><br>
+    Kitties don't like to be hit with snow, can you save him?
   </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/about">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
